# gamepad-proxy

./: LICENSE  README.md  TESTING.md  gamepad.py  pyproject.toml
docs/: evdev_UInput_type_discrepancy.md
tests/: test_gamepad.py
